Add Settings Page

--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -8,8 +8,10 @@ $Danger: #D95454;
 $Ice: #F0F3F4;
 $Fossil: #C8D1D3;
 $Sand: #B9B0A2;
+$Cold: #ECEFF0;
 
 //Typography Colors
 $Onyx: #1B1C20;
 $Slate: #6E8CA0;
 $Snow: #FFFFFF;
+
