--- a/SCSS/index.scss
+++ b/SCSS/index.scss
@@ -2,6 +2,8 @@
 @import "./Common-Blocks/Frontpage/Navigation/SCSS/_nav.scss";
 @import "./Common-Blocks/Frontpage/Category-Section/SCSS/_category.scss";
 @import "./Common-Blocks/Frontpage/Category-Section/SCSS/_category-items.scss";
+@import "./Common-Blocks/Settings/Header/SCSS/_header.scss";
+@import "./Common-Blocks/Settings/Header/SCSS/_mainarea.scss";
 
 @import "./SCSS/_variables.scss";
 
