--- a/Common-Blocks/Frontpage/Category-Section/SCSS/_category.scss
+++ b/Common-Blocks/Frontpage/Category-Section/SCSS/_category.scss
@@ -1,5 +1,10 @@
 @import "./SCSS/_variables.scss";
 
+.hr-1 {
+    box-shadow: $Drab 0px 2px 5px;
+    opacity: 50%;
+}
+
 .category {
     
     height: 60px;
