--- a/SCSS/index.scss
+++ b/SCSS/index.scss
@@ -5,6 +5,8 @@
 @import "./Common-Blocks/Settings/Header/SCSS/_header.scss";
 @import "./Common-Blocks/Settings/Header/SCSS/_mainarea.scss";
 @import "./Common-Blocks/Settings/Header/SCSS/_darkmode.scss";
+@import "./Common-Blocks/Archive/SCSS/_header.scss";
+@import "./Common-Blocks/Archive/SCSS/_deleted.scss";
 
 @import "./SCSS/_variables.scss";
 
